--- a/main.ipynb
+++ b/main.ipynb
@@ -10,6 +10,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d076efb",
+   "metadata": {},
+   "source": [
+    "## Import Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be4f0aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tf.keras.datasets import mnist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9f53ff8",
    "metadata": {},
    "source": [
@@ -27,8 +46,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
