--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from tf.keras.datasets import mnist"
+    "from tensorflow.keras.datasets import mnist"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "id": "ec88a00b",
    "metadata": {},
    "source": [
-    "1. Beginner Deep Learning Tutorial | MNIST Digits Classification Neural Network in Python, Keras\n",
+    "1. MNIST Handwritten Digit Classification - Deep Learning with Tensorflow | Ep. 10\n",
     "    - https://www.youtube.com/watch?v=BfCPxoYCgo0&t=1s"
    ]
   }
