--- a/main.ipynb
+++ b/main.ipynb
@@ -29,6 +29,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "454474ab",
+   "metadata": {},
+   "source": [
+    "## Splitting the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ca4cd9a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9963eb1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 28, 28)\n",
+      "(10000, 28, 28)\n",
+      "(60000,)\n",
+      "(10000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(X_test.shape)\n",
+    "print(y_train.shape)\n",
+    "print(y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9f53ff8",
    "metadata": {},
    "source": [
@@ -41,7 +83,7 @@
    "metadata": {},
    "source": [
     "1. MNIST Handwritten Digit Classification - Deep Learning with Tensorflow | Ep. 10\n",
-    "    - https://www.youtube.com/watch?v=BfCPxoYCgo0&t=1s"
+    "    - https://www.youtube.com/watch?v=OCU7-5LdPhY"
    ]
   }
  ],
