--- a/main.ipynb
+++ b/main.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "25d5f6d5",
    "metadata": {},
    "outputs": [],
@@ -604,7 +604,8 @@
     "X_train = X_train.reshape(-1, 28 * 28) \n",
     "X_test = X_test.reshape(-1, 28 * 28)\n",
     "\n",
-    "# flatten images from 28 x 28 matrices to a 784 vector"
+    "# flatten images from 28 x 28 matrices to a 784 vector\n",
+    "# dense neural network only works with one dimensional data"
    ]
   },
   {
