Create and compile neural network

--- a/main.ipynb
+++ b/main.ipynb
@@ -1062,6 +1062,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76d055c8",
+   "metadata": {},
+   "source": [
+    "## Model Architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "161d33d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Input(shape=(784,)),\n",
+    "    tf.keras.layers.Dense(128, activation='relu'),\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "792c7d7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 128)               100480    \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 64)                8256      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 10)                650       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 109,386\n",
+      "Trainable params: 109,386\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentrophy', metrics=[\"accuracy\"])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9f53ff8",
    "metadata": {},
    "source": [
