--- a/main.ipynb
+++ b/main.ipynb
@@ -1070,22 +1070,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "161d33d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = tf.keras.models.Sequential([\n",
-    "    tf.keras.layers.Input(shape=(784,)),\n",
+    "    tf.keras.layers.Input(shape=(784,)), # 28 x 28 single vector\n",
     "    tf.keras.layers.Dense(128, activation='relu'),\n",
     "    tf.keras.layers.Dense(64, activation='relu'),\n",
-    "    tf.keras.layers.Dense(10, activation='softmax')\n",
+    "    tf.keras.layers.Dense(10, activation='softmax') # 10 classes - single label classification\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "792c7d7d",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1113,10 @@
    ],
    "source": [
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentrophy', metrics=[\"accuracy\"])\n",
-    "model.summary()"
+    "model.summary()\n",
+    "\n",
+    "# sparse_categorical_crossentrophy since one hot encoding is not done\n",
+    "# labels are just integer values y_train[0]"
    ]
   },
   {
